@@ -1,9 +1,13 @@
 package com.example.picmejava.model.mapper;
 
 import com.example.picmejava.model.Fotografo;
-import com.example.picmejava.model.dto.*;
+import com.example.picmejava.service.usuario.dto.AtualizarUsuarioDTO;
+import com.example.picmejava.service.usuario.dto.CadastroUsuarioDTO;
+import com.example.picmejava.service.usuario.dto.PerfilFotografoDTO;
+import com.example.picmejava.service.usuario.dto.RetornoFotografoDTO;
 
 import java.time.LocalDate;
+import java.util.stream.Collectors;
 
 public class FotografoMapper {
 
@@ -12,11 +16,14 @@ public class FotografoMapper {
 
         dto.setId(dados.getId());
         if (dados.getAlbums() != null){
-            dto.setAlbums(dados.getAlbums().stream().map((album) -> AlbumMapper.toAlbumDTO(album)).toList());
+            dto.setAlbums(dados.getAlbums().stream().map(AlbumMapper::toAlbumDTO).collect(Collectors.toList()));
         }
         dto.setAutenticado(dados.getAutenticado());
         dto.setNome(dados.getNome());
         dto.setTipoUsuario(dados.getTipoUsuario());
+        if (dados.getTemas() != null){
+            dto.setTemas(dados.getTemas().stream().map(TemaMapper::toPerfilTemaDTO).toList());
+        }
 
         return dto;
     }
@@ -29,7 +36,7 @@ public class FotografoMapper {
         dto.setAutenticado(fotografo.getAutenticado());
         dto.setTipoUsuario(fotografo.getTipoUsuario());
         if (fotografo.getTemas() != null){
-            dto.setTemas(fotografo.getTemas().stream().map(tema -> TemaMapper.toPerfilTemaDTO(tema)).toList());
+            dto.setTemas(fotografo.getTemas().stream().map(TemaMapper::toPerfilTemaDTO).toList());
         }
 
         return dto;
